# PyOpenTracks

./: .gitignore  DEVELOPMENT.md  Pipfile  README.md  build.sh  deb_package.sh  es.rgmf.pyopentracks-dev.json  es.rgmf.pyopentracks.json  flatpak.sh  meson.build  meson_options.txt  run.sh
data/: es.rgmf.pyopentracks.appdata.xml.in  es.rgmf.pyopentracks.desktop.in  es.rgmf.pyopentracks.gschema.xml  meson.build  pyopentracks.gresource.xml
debian/: changelog  control  copyright  rules
doc/: internal_data.md
po/: LINGUAS  POTFILES  compile_potfiles.sh  es.mo  es.po  meson.build  update_potfiles.sh
pyopentracks/: app.py  app_activity_analytic.py  app_activity_info.py  app_activity_list.py  app_analytic.py  app_external.py  app_interfaces.py  app_preferences.py  app_segments.py  app_track_analytic.py  app_track_list.py  app_track_list_interfaces.py  app_window.py  main.py  meson.build  pyopentracks.py.in  settings.py  settings.py.in
scripts/: pyactivitiesnames.py
src/: app.py  app_analytic.py  app_preferences.py  app_window.py  file_chooser.py  gpx_parser.py  layout.py  main.py  meson.build  pyopentracks.py.in  settings.py  track_stats.py  utils.py
src/io/: gpx_parser.py  import_handler.py
src/models/: aggregated_stats.py  auto_import.py  database.py  migrations.py  model.py  track.py  track_point.py  track_stats.py
src/stats/: track_stats.py
src/utils/: utils.py
src/views/: analytic.py  dialogs.py  file_chooser.py  graphs.py  layout.py  maps.py
tests/: mock_db.py  test_aggregated_stats.py  test_fit_parser.py  test_gain_loss_filter.py  test_gpx_parser.py  (+3 more)
(+170 files in other folders)
